# ai-nvidia-nemo-agent-toolkit

./: .gitignore  README.md  env_setup.py  pyproject.toml
.github/: timestamp
.github/workflows/: main.yml
NeMo-Agent-Toolkit-UI/: .env  README.md  package.json
NeMo-Agent-Toolkit-UI/components/Chat/: Chat.tsx
NeMo-Agent-Toolkit-UI/proxy/: server.js
climate_analyzer/data/: simple_eval.json
climate_analyzer/src/climate_analyzer/: register.py
climate_analyzer/src/climate_analyzer/configs/: config.yml
climate_analyzer/src/climate_analyzer/utils/: calculator_agent.py  climate_tools_simple.py
evaluation_results/: show_results.py
simple_workflow/: check_local_api.py  config.yml  web_ui.py
simple_workflow/helpers/: ui_manager.py
